# lego-art-map-blog-post

./: .gitignore  Makefile  README.md  projection_animation.py  pyproject.toml  render.py  requirements.txt
util/: lego_projection_transformer_builder.py  number_plane_helper.py  shapely_helper.py  shapely_manim_helper.py
