[tool.poetry]
name = "lego-art-map-blog-post"
version = "0.1.0"
description = ""
authors = ["Leif Gehrmann <leif.gehrmann@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Shapely = "^1.8.0"
pyshp = "^2.1.3"
pyproj = "^3.2.1"
manim = "^0.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
