[tool.poetry]
name = "lego-art-map-blog-post"
version = "0.1.0"
description = ""
authors = ["Leif Gehrmann <leif.gehrmann@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
Shapely = "^1.8.2"
pyshp = "^2.3.0"
pyproj = "^3.3.1"
manim = "^0.15.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
